# geo-recon

./: .gitignore  LICENSE  README.md  cli.py  geoconf.yaml  pyproject.toml
.github/workflows/: release.yml
js/: location.js
server/: geo_router.py  main.py  tg_sync.py
storage/: captures.jsonl
templates/: meta.json
templates/gdisk/: index.html
templates/gdisk/static/css/: style.css
templates/near_you/: index.html
templates/near_you/static/css/: style.css
templates/telegram/: index.html
templates/telegram/static/css/: style.css
