[project]
name = "geo-recon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "colorama>=0.4.6",
    "fastapi>=0.136.1",
    "jinja2>=3.1.6",
    "pyfiglet>=1.0.4",
    "python-telegram-bot>=22.7",
    "pyyaml>=6.0.3",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]

[tool.ruff]
# Версия Python, под которую пишем
target-version = "py312"

# Длина строки (как у black по умолчанию)
line-length = 88

# Директории, которые не нужно проверять
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "venv",
    "*.pyc",
    "alembic",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff
]

ignore = [
    "F403",    # import *
    "F405",    # names from import *
    "E501",
    "B008",
    "B904",
    "RUF001",
    "RUF012",
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["server"]      # заменить на имя твоего корневого пакета
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"