[build-system]
requires = ["setuptools>=61.0,<75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "georecon"
version = "0.1.0"
description = "Asynchronous geolocation capture service for OSINT investigations. Serve convincing phishing pages to capture visitor device information and GPS coordinates."
readme = "README.md"
requires-python = ">=3.12"
keywords = ["gps", "geo", "python", "hack", "osint"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries"
]
authors = [
    {name = "Mark", email = "levmarkpost@gmail.com"}
]
dependencies = [
    "argparse>=1.4.0",
    "colorama>=0.4.6",
    "fastapi>=0.136.1",
    "jinja2>=3.1.6",
    "pyfiglet>=1.0.4",
    "python-telegram-bot>=22.7",
    "pyyaml>=6.0.3",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]


[tool.ruff]
target-version = "py312"

line-length = 88

exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "venv",
    "*.pyc",
    "alembic",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff
]

ignore = [
    "F403",    # import *
    "F405",    # names from import *
    "E501",
    "B008",
    "B904",
    "RUF001",
    "RUF012",
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["server"]
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[project.scripts]
georecon = "cli:main"


[project.urls]
Homepage = "https://github.com/MarkLevkovich/geo-recon"