[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "georecon"
version = "0.2.1"
description = "Asynchronous geolocation capture service for OSINT investigations. Serve convincing phishing pages to capture visitor device information and GPS coordinates."
readme = "README.md"
requires-python = ">=3.12"
keywords = ["gps", "geo", "python", "hack", "osint"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries"
]
authors = [
    { name = "Mark", email = "levmarkpost@gmail.com" }
]
dependencies = [
    "aiofiles>=25.1.0",
    "colorama>=0.4.6",
    "fastapi>=0.100.0",
    "jinja2>=3.1.2",
    "pyfiglet>=1.0.2",
    "python-telegram-bot>=20.0",
    "pyyaml>=6.0",
    "uvicorn>=0.22.0",
]

[tool.setuptools]
packages = ["server"]
py-modules = ["cli"]

[tool.setuptools.package-data]
"*" = ["js/*", "templates/**/*", "geoconf.yaml"]

[project.scripts]
georecon = "cli:main"

[project.urls]
Homepage = "https://github.com/MarkLevkovich/geo-recon"

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [".git", ".venv", "__pycache__", "venv", "*.pyc"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["F403", "F405", "E501", "B008", "B904", "RUF001", "RUF012"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["server"]
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
